eliminazione token correzione infromazioni

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ img {
 </div>
 
 <div class="bg-text">
-    <h1 style="font-size:5vh">Infromazioni Utili</h1>
+    <h1 style="font-size:5vh">Informazioni Utili</h1>
 </div>
 
 
