--- a/listaviaggio.html
+++ b/listaviaggio.html
@@ -56,7 +56,7 @@ body, html {
     <h1 style="font-size:5vh">Lista viaggio di nozze in allestimento</h1>  
     <h2 style="font-size:3vh">Vi chiediamo di pazientare: saremo operativi tra pochi giorni!</h2>
     <p style="font-size:4vh">Valentina & Lorenzo</p>
-   <a style="font-size:2vh" href="https://h4ppyplace.ddns.net/valentinaelorenzo">Torna indietro</a> 
+   <a style="font-size:2vh" href="https://lorenzoevalentina.github.io">Torna alla home</a> 
 
 
 </div>
