--- a/index.html
+++ b/index.html
@@ -2,11 +2,58 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bentham">
 <style>
 body, html {
-  height: 100%;
   margin: 0;
-  font-family: font-family: georgia, serif;
+   font-family: "Bentham",serif;
+  color: #FFFFFF;
+  background-image: linear-gradient(0deg, #97c6fe, #111);
+  /*background-color:#97c6fe;*/
+}
+
+h1{
+    font-size: 6vh;
+     color: #FFFFFF;
+    text-align: center;
+    font-weight: bold;
+}
+
+h2{
+    font-size: 3vh;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+
+a.ex1 {
+  padding-bottom: 2vh;
+  font-weight: bold;
+  color: #003cad;
+  font-family: trebuchet ms;
+}
+
+
+a.ex1:link {
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a.ex1:visited {
+   background-color: transparent;
+  text-decoration: none;
+}
+
+a.ex1:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a.ex1:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
 }
 
 
@@ -29,30 +76,56 @@ img {
 
 }
 
-/* Position text in the middle of the page/image */
 .bg-text {
   font-weight: bold;
+  font-family: "Bentham",serif;
   position: absolute;
   left: 50%;
-  transform: translate(-50%, -10%);
+  transform: translate(-50%, +10%);
   z-index: 2;
   width: 80%;
   padding: 20px;
+  padding-bottom: 0vh;
   text-align: center;
+color: #111
+
 }
+
+
+figcaption {
+    color: #FFF;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 2.5vh;
+}
+
+p{
+    font-size: 2.5vh;
+}
+
 
 
 </style>
 </head>
-<body style="background-color:#97c6fe;">
 
+<body>
 <div class="container">
-    <img src="Invitation-1_chin.jpg">
+    <img src="Invitation-2NoWaterMark.jpg">
+    <figcaption>Scorrere in basso per maggiori dettagli</figcaption>
+   
 </div>
 
-<div class="bg-text">
-    <h1 style="font-size:5vh">Informazioni Utili</h1>
-</div>
+<h1>Link Utili</h1>
+
+
+<p><a class="ex1" href="https://goo.gl/maps/E1LcvcmTMp2PD2a8A?coh=178573&entry=tt">Chiesa di Sant'Apollinare</a></p>
+<p><a class="ex1" href="https://goo.gl/maps/xy4Q23bznXbJyMYz5?coh=178573&entry=tt">Ristorante La Casina</a></p>
+<p><a class="ex1" href="https://lorenzoevalentina.github.io/listaviaggio">Lista viaggio di Nozze</a></p>
+   
+
 
 
 </body>
