--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@ h2{
 a.ex1 {
   padding-bottom: 2vh;
   font-weight: bold;
-  color: #003cad;
+  color: #FFF;
   font-family: trebuchet ms;
+  
 }
 
 
@@ -76,21 +77,6 @@ img {
 
 }
 
-.bg-text {
-  font-weight: bold;
-  font-family: "Bentham",serif;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, +10%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  padding-bottom: 0vh;
-  text-align: center;
-color: #111
-
-}
-
 
 figcaption {
     color: #FFF;
@@ -100,11 +86,15 @@ figcaption {
     right: 0;
     text-align: center;
     font-size: 2.5vh;
+    font-family: "Bentham",serif;
 }
 
 p{
     font-size: 2.5vh;
+    text-align: center;
+text-transform: capitalize;
 }
+
 
 
 
@@ -118,13 +108,16 @@ p{
    
 </div>
 
-<h1>Link Utili</h1>
+<h1><br><br>Link Utili<br></h1>
 
 
 <p><a class="ex1" href="https://goo.gl/maps/E1LcvcmTMp2PD2a8A?coh=178573&entry=tt">Chiesa di Sant'Apollinare</a></p>
 <p><a class="ex1" href="https://goo.gl/maps/xy4Q23bznXbJyMYz5?coh=178573&entry=tt">Ristorante La Casina</a></p>
 <p><a class="ex1" href="https://lorenzoevalentina.github.io/listaviaggio">Lista viaggio di Nozze</a></p>
-   
+<br>
+<br>
+<br>
+<br>
 
 
 
