--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ text-transform: capitalize;
 
 
 <p><a class="ex1" href="https://goo.gl/maps/E1LcvcmTMp2PD2a8A?coh=178573&entry=tt">Chiesa di Sant'Apollinare</a></p>
+<p><a class="ex1" href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Ampio parcheggio libero in prossimità della chiesa</a></p>
 <p><a class="ex1" href="https://goo.gl/maps/xy4Q23bznXbJyMYz5?coh=178573&entry=tt">Ristorante La Casina</a></p>
 <p><a class="ex1" href="https://lorenzoevalentina.github.io/listaviaggio">Lista viaggio di Nozze</a></p>
 <br>
