--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bentham">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair Display">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+
 <style>
 body, html {
   margin: 0;
@@ -17,6 +20,10 @@ h1{
      color: #FFFFFF;
     text-align: center;
     font-weight: bold;
+/*font-family: "Bentham",serif;*/
+font-family: "Playfair Display";
+
+text-transform: uppercase;
 }
 
 h2{
@@ -31,7 +38,9 @@ a.ex1 {
   font-weight: bold;
   color: #FFF;
   font-family: trebuchet ms;
-  
+/*font-family: "Bentham",serif;*/
+  /*font-family: "Raleway";*/
+
 }
 
 
@@ -85,8 +94,10 @@ figcaption {
     left: 0;
     right: 0;
     text-align: center;
-    font-size: 2.5vh;
-    font-family: "Bentham",serif;
+    font-size: 2vh;
+/*    font-family: trebuchet ms;*/
+font-family: "Playfair Display";
+text-transform: uppercase;
 }
 
 p{
