aggiunta richiesta conferma, tweak layout

--- a/inLavorazione.html
+++ b/inLavorazione.html
@@ -11,11 +11,11 @@ body, html {
   margin: 0;
    font-family: "Bentham",serif;
   color: #FFFFFF;
-  background-image: linear-gradient(0deg, #97c6fe, #111);
+  background-image: linear-gradient(15deg, #97c6fe, #111);
   /*background-color:#97c6fe;*/
 }
 
-h1{
+h1{ /* link utili */
     font-size: 6vh;
      color: #FFFFFF;
     text-align: center;
@@ -26,10 +26,21 @@ font-family: "Playfair Display";
 text-transform: uppercase;
 }
 
-h2{
+h2{ /* attendiamo gentile conferma */
     font-size: 3vh;
     color: #FFFFFF;
     text-align: center;
+    font-family: "Playfair Display";
+font-weight: bold;
+}
+
+h3{ /* Valentina e Lorenzo */
+    font-size: 3vh;
+    color: #FFFFFF;
+    text-align: center;
+    font-family: trebuchet ms;
+font-weight: bold;
+    
 }
 
 
@@ -37,6 +48,7 @@ a.ex1 {
   padding-bottom: 2vh;
   font-weight: bold;
   color: #FFF;
+font-size: 2.5vh;
   font-family: trebuchet ms;
 /*font-family: "Bentham",serif;*/
   /*font-family: "Raleway";*/
@@ -87,23 +99,25 @@ img {
 }
 
 
-figcaption {
+figcaption { /* scorrere in basso per maggiori dettagli*/
     color: #FFF;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
+    transform: translate(0, -2vh);
     text-align: center;
-    font-size: 2vh;
+    font-size: 1.8vh;
 /*    font-family: trebuchet ms;*/
 font-family: "Playfair Display";
 text-transform: uppercase;
 }
 
 p{
-    font-size: 2.5vh;
+    
     text-align: center;
-text-transform: capitalize;
+font-family: trebuchet ms;
+font-weight: bold;
 }
 
 
@@ -123,9 +137,13 @@ text-transform: capitalize;
 
 
 <p><a class="ex1" href="https://goo.gl/maps/E1LcvcmTMp2PD2a8A?coh=178573&entry=tt">Chiesa di Sant'Apollinare</a></p>
-<p><a class="ex1" href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Ampio parcheggio libero in prossimità della chiesa</a></p>
+<p><a class="ex1" href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Ampio parcheggio libero in prossimità della Chiesa</a></p>
 <p><a class="ex1" href="https://goo.gl/maps/xy4Q23bznXbJyMYz5?coh=178573&entry=tt">Ristorante La Casina</a></p>
 <p><a class="ex1" href="https://lorenzoevalentina.github.io/listaviaggio">Lista viaggio di Nozze</a></p>
+<br>
+<br>
+<h2 style="text-transform: uppercase;">Attendiamo gentile conferma</h2>
+<h3>Valentina e Lorenzo</h3>
 <br>
 <br>
 <br>
