--- a/index.html
+++ b/index.html
@@ -133,6 +133,43 @@ font-weight: bold;
    
 </div>
 
+<!-- Display the countdown timer in an element -->
+<h1 style="font-size: 3vh;" ><br><br>Mancano:</h1><h3 id="demo" style="font-size: 6vh;"> </h3>
+
+<script>
+// Set the date we're counting down to
+var countDownDate = new Date("Jun 10, 2023 10:30:00").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+/*  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";*/
+
+  // Display the result in the element with id="demo"
+   document.getElementById("demo").innerHTML = days + " giorni"
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "0 giorni";
+  }
+}, 1000);
+</script>
+
 <h1><br>Link Utili<br></h1>
 
 
