Cronoscalata revisione impaginazione ed errori

--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -48,18 +48,23 @@ a:active {
 
 
 li {
-    font-size:4vh;
+    font-size:3vh;
     text-align:left;
-padding-bottom:10vh;
+padding-bottom:3vh;
 }
 
 p {
- font-size:3vh;
+ font-size:2vh;
 text-align:left;
 }
 h1{
  font-size:5vh;
     text-align:center;
+padding-bottom:10vh;
+}
+
+h2{
+    font-size:3vh;
 }
 
 
@@ -74,7 +79,7 @@ h1{
 
 <div class="bg-text">
     <h1 >Informazioni parcheggio e viabilità</h1>  
-    <h2 style="font-size:3vh">Il 10 Giugno si svolgerà a Trento una gara automobilistica, la 72a cronoscalata Trento-Bondone. Qui di seguito alcune considerazioni per i nostri ospiti:</h2></a> <br><br><br>
+    <h2 >Il 10 Giugno si svolgerà a Trento una gara automobilistica, la 72a cronoscalata Trento-Bondone. Qui di seguito alcune considerazioni per i nostri ospiti:</h2></a> <br><br><br>
     <p >La gara si svolge sul monte Bondone, la montagna immediatamente a Ovest di Trento, sfortunatamente non troppo distante dalla Chiesa di Sant'Apollinare, sede della cerimonia, quindi il traffico potrebbe essere più sostenuto del solito.<br>
 L'area di sosta più prossima alla Chiesa, il Parcheggio ex-Italcementi, dovrebbe essere libero, tuttavia anch'esso potrebbe essere più frequentato del solito.
 Tra le altre aree di parcheggio della zona, il Parcheggio Zuffo sarà occupato interamente dall'evento automobilistico.
@@ -84,10 +89,10 @@ Riassumendo le aree di parcheggio disponibili nella zona (dalla più vicina alla
  <li> <a href="https://goo.gl/maps/z2KsYcNXRwr3KPMx7?coh=178573&entry=tt">Parcheggio Area Ex SIT via Canestrini - P1 (Parcheggio scoperto a pagamento)</a> </li><br>
   <li><a  href="https://goo.gl/maps/p7yHqqhGkMBLhi1K7?coh=178573&entry=tt">Parcheggio Duomo P5 (Parcheggio coperto a pagamento)
 </a></li> <br>
-  <li><a  href="https://goo.gl/maps/xKznUPNawKYb4nSS8?coh=178573&entry=tt">Parcheggio Parcheggio Sanseverino (Parcheggio scoperto gratuito)
+  <li><a  href="https://goo.gl/maps/xKznUPNawKYb4nSS8?coh=178573&entry=tt">Parcheggio Sanseverino P7 (Parcheggio scoperto gratuito)
 </a></li> <br>
 </ul>
-<p >Tra questi quello meno frequentato di solito é Parcheggio Duomo P5.<br>Qualora saranno disponibili informazioni più aggiornate, provvederemo a pubblicarle in questa pagina.</p>
+<p >Tra questi quello meno frequentato di solito é il Parcheggio Duomo P5.<br>Qualora siano disponibili informazioni più aggiornate, provvederemo a pubblicarle in questa pagina.</p>
 </div>
 </body>
 </html>
