Cronoscalata revisione impaginazione ed errori (2 volta)

--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -70,7 +70,7 @@ h2{
 
 .bg-text {
   background-color: transparent; /* Fallback color */
-  padding: 10vh;
+  padding: 3vh;
 }
 
 </style>
@@ -92,7 +92,7 @@ Riassumendo le aree di parcheggio disponibili nella zona (dalla più vicina alla
   <li><a  href="https://goo.gl/maps/xKznUPNawKYb4nSS8?coh=178573&entry=tt">Parcheggio Sanseverino P7 (Parcheggio scoperto gratuito)
 </a></li> <br>
 </ul>
-<p >Tra questi quello meno frequentato di solito é il Parcheggio Duomo P5.<br>Qualora siano disponibili informazioni più aggiornate, provvederemo a pubblicarle in questa pagina.</p>
+<p >Tra questi quello meno frequentato di solito é il Parcheggio Duomo P5.<br>Qualora fossero disponibili informazioni più aggiornate, provvederemo a pubblicarle in questa pagina.</p>
 </div>
 </body>
 </html>
