Cronoscalata revisione impaginazione ed errori (3 volta)

--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -60,17 +60,20 @@ text-align:left;
 h1{
  font-size:5vh;
     text-align:center;
-padding-bottom:10vh;
+padding-bottom:3vh;
 }
 
 h2{
     font-size:3vh;
+padding-bottom: 2vh;
 }
 
 
 .bg-text {
   background-color: transparent; /* Fallback color */
-  padding: 3vh;
+  padding-bottom: 20vh;
+   padding-left: 3vh;
+    padding-right: 3vh;
 }
 
 </style>
@@ -79,11 +82,11 @@ h2{
 
 <div class="bg-text">
     <h1 >Informazioni parcheggio e viabilità</h1>  
-    <h2 >Il 10 Giugno si svolgerà a Trento una gara automobilistica, la 72a cronoscalata Trento-Bondone. Qui di seguito alcune considerazioni per i nostri ospiti:</h2></a> <br><br><br>
-    <p >La gara si svolge sul monte Bondone, la montagna immediatamente a Ovest di Trento, sfortunatamente non troppo distante dalla Chiesa di Sant'Apollinare, sede della cerimonia, quindi il traffico potrebbe essere più sostenuto del solito.<br>
-L'area di sosta più prossima alla Chiesa, il Parcheggio ex-Italcementi, dovrebbe essere libero, tuttavia anch'esso potrebbe essere più frequentato del solito.
-Tra le altre aree di parcheggio della zona, il Parcheggio Zuffo sarà occupato interamente dall'evento automobilistico.
-Riassumendo le aree di parcheggio disponibili nella zona (dalla più vicina alla Chiesa alla più lontana):</p><br><br><br>
+    <h2 >Il 10 Giugno si svolgerà a Trento una gara automobilistica, la 72a cronoscalata Trento-Bondone. Qui di seguito alcune considerazioni per i nostri ospiti:</h2></a>
+    <p >La gara si svolge sul monte Bondone, la montagna immediatamente a Ovest di Trento, sfortunatamente non troppo distante dalla Chiesa di Sant'Apollinare, quindi il traffico potrebbe essere più sostenuto del solito.<br>
+L'area di sosta più prossima alla Chiesa, il Parcheggio ex-Italcementi, dovrebbe essere libero, tuttavia anch'esso potrebbe essere più frequentato.
+Tra le altre aree di parcheggio della zona, il Parcheggio Zuffo sarà invece occupato interamente dall'evento automobilistico.
+Riassumendo le aree di parcheggio disponibili (dalla più vicina alla Chiesa alla più lontana):</p><br><br><br>
 <ul>
 <li><a  href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Parcheggio ex-Italcementi (Parcheggio scoperto gratuito)</a></li><br>
  <li> <a href="https://goo.gl/maps/z2KsYcNXRwr3KPMx7?coh=178573&entry=tt">Parcheggio Area Ex SIT via Canestrini - P1 (Parcheggio scoperto a pagamento)</a> </li><br>
