Cronoscalata revisione impaginazione ed errori (4 volta)

--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -86,7 +86,7 @@ padding-bottom: 2vh;
     <p >La gara si svolge sul monte Bondone, la montagna immediatamente a Ovest di Trento, sfortunatamente non troppo distante dalla Chiesa di Sant'Apollinare, quindi il traffico potrebbe essere più sostenuto del solito.<br>
 L'area di sosta più prossima alla Chiesa, il Parcheggio ex-Italcementi, dovrebbe essere libero, tuttavia anch'esso potrebbe essere più frequentato.
 Tra le altre aree di parcheggio della zona, il Parcheggio Zuffo sarà invece occupato interamente dall'evento automobilistico.
-Riassumendo le aree di parcheggio disponibili (dalla più vicina alla Chiesa alla più lontana):</p><br><br><br>
+Riassumendo le aree di parcheggio disponibili (dalla più vicina alla Chiesa alla più lontana):</p><br>
 <ul>
 <li><a  href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Parcheggio ex-Italcementi (Parcheggio scoperto gratuito)</a></li><br>
  <li> <a href="https://goo.gl/maps/z2KsYcNXRwr3KPMx7?coh=178573&entry=tt">Parcheggio Area Ex SIT via Canestrini - P1 (Parcheggio scoperto a pagamento)</a> </li><br>
