--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body, html {
-  font-family: font-family: georgia, serif;
+  font-family: "Bentham",serif;
 /*background-color: #4181cd;*/
 background-image: linear-gradient(15deg, #4181cd, #111);
 color: #ccdbf9;
@@ -48,23 +48,26 @@ a:active {
 
 
 li {
-    font-size:3vh;
+    font-size:4vh;
     text-align:left;
 padding-bottom:3vh;
 }
 
 p {
- font-size:2vh;
+ font-size:3vh;
 text-align:left;
 }
 h1{
+font-family: "Playfair Display";
+
+text-transform: uppercase;
  font-size:5vh;
     text-align:center;
 padding-bottom:3vh;
 }
 
 h2{
-    font-size:3vh;
+    font-size:4vh;
 padding-bottom: 2vh;
 }
 
