--- a/index_definitivoPreCronoascalata.html
+++ b/index_definitivoPreCronoascalata.html
@@ -11,7 +11,7 @@ body, html {
   margin: 0;
    font-family: "Bentham",serif;
   color: #FFFFFF;
-  background-image: linear-gradient(15deg, #4181cd, #111);
+  background-image: linear-gradient(15deg, #97c6fe, #111);
   /*background-color:#97c6fe;*/
 }
 
@@ -186,9 +186,9 @@ var x = setInterval(function() {
 
 
 <p><a class="ex1" href="https://goo.gl/maps/E1LcvcmTMp2PD2a8A?coh=178573&entry=tt">Chiesa di Sant'Apollinare</a></p>
-<p><a class="ex1" style="color: #e3c82c" href="https://lorenzoevalentina.github.io/Cronoscalata">Parcheggi e viabilità (INFO IMPORTANTI)</a></p>
+<p><a class="ex1" href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Ampio parcheggio libero in prossimità della Chiesa</a></p>
 <p><a class="ex1" href="https://goo.gl/maps/xy4Q23bznXbJyMYz5?coh=178573&entry=tt">Ristorante La Casina</a></p>
-<p><a class="ex1" href="http://uli.st/lorenzoevalentina">Lista viaggio di Nozze</a></p>
+<p><a class="ex1" href="http://uli.st/lorenzoevalentina">Lista viaggio di Nozze (AGGIORNATO!)</a></p>
 <br>
 <br>
 <br>
