--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body, html {
-  font-family: "Bentham",serif;
+  font-family: trebuchet ms;
 /*background-color: #4181cd;*/
 background-image: linear-gradient(15deg, #4181cd, #111);
 color: #ccdbf9;
