Cronoscalata: colore carattere bianco

--- a/Cronoscalata.html
+++ b/Cronoscalata.html
@@ -10,7 +10,7 @@ body, html {
   font-family: trebuchet ms;
 /*background-color: #4181cd;*/
 background-image: linear-gradient(15deg, #4181cd, #111);
-color: #ccdbf9;
+color: #FFFFFF;
 }
 
 
@@ -18,7 +18,7 @@ color: #ccdbf9;
 a {
   padding-bottom: 2vh;
   font-weight: bold;
-  color: #ccdbf9;
+  color: #FFFFFF;
     
 }
 
@@ -86,8 +86,8 @@ padding-bottom: 2vh;
 <div class="bg-text">
     <h1 >Informazioni parcheggio e viabilità</h1>  
     <h2 >Il 10 Giugno si svolgerà a Trento una gara automobilistica, la 72a cronoscalata Trento-Bondone. Qui di seguito alcune considerazioni per i nostri ospiti:</h2></a>
-    <p >La gara si svolge sul monte Bondone, la montagna immediatamente a Ovest di Trento, sfortunatamente non troppo distante dalla Chiesa di Sant'Apollinare, quindi il traffico potrebbe essere più sostenuto del solito.<br>
-L'area di sosta più prossima alla Chiesa, il Parcheggio ex-Italcementi, dovrebbe essere libero, tuttavia anch'esso potrebbe essere più frequentato.
+    <p >La gara si svolge sul monte Bondone, la montagna immediatamente a Ovest di Trento, sfortunatamente non troppo distante dalla Chiesa di Sant'Apollinare, per questo il traffico potrebbe essere più sostenuto del solito.<br>
+L'area di sosta più vicina alla Chiesa, il Parcheggio ex-Italcementi, dovrebbe essere libero, tuttavia anch'esso potrebbe essere più frequentato.
 Tra le altre aree di parcheggio della zona, il Parcheggio Zuffo sarà invece occupato interamente dall'evento automobilistico.
 Riassumendo le aree di parcheggio disponibili (dalla più vicina alla Chiesa alla più lontana):</p><br>
 <ul>
