--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ var x = setInterval(function() {
 
 
 <p><a class="ex1" href="https://goo.gl/maps/E1LcvcmTMp2PD2a8A?coh=178573&entry=tt">Chiesa di Sant'Apollinare</a></p>
-<p><a class="ex1" style="color: #e3c82c" href="https://lorenzoevalentina.github.io/Cronoscalata">Parcheggi e viabilità (INFO IMPORTANTI)</a></p>
+<p><a class="ex1" style="color: #e3c82c" href="https://lorenzoevalentina.github.io/Cronoscalata">Parcheggi e viabilità (NUOVE INFO IMPORTANTI)</a></p>
 <p><a class="ex1" href="https://goo.gl/maps/xy4Q23bznXbJyMYz5?coh=178573&entry=tt">Ristorante La Casina</a></p>
 <p><a class="ex1" href="http://uli.st/lorenzoevalentina">Lista viaggio di Nozze</a></p>
 <br>
