Parcheggio ex-SIT gratuito

--- a/Cronoscalata_primaVersione.html
+++ b/Cronoscalata_primaVersione.html
@@ -92,7 +92,7 @@ Tra le altre aree di parcheggio della zona, il Parcheggio Zuffo sarà invece occ
 Riassumendo le aree di parcheggio disponibili (dalla più vicina alla Chiesa alla più lontana):</p><br>
 <ul>
 <li><a  href="https://goo.gl/maps/xVHg6yZn9qwPm2AcA?coh=178573&entry=tt">Parcheggio ex-Italcementi (Parcheggio scoperto gratuito)</a></li><br>
- <li> <a href="https://goo.gl/maps/z2KsYcNXRwr3KPMx7?coh=178573&entry=tt">Parcheggio Area Ex SIT via Canestrini - P1 (Parcheggio scoperto a pagamento, in occasione delle gare dovrebbe essere gratuito)</a> </li><br>
+ <li> <a href="https://goo.gl/maps/z2KsYcNXRwr3KPMx7?coh=178573&entry=tt">Parcheggio Area Ex SIT via Canestrini - P1 (Parcheggio scoperto a pagamento)</a> </li><br>
   <li><a  href="https://goo.gl/maps/p7yHqqhGkMBLhi1K7?coh=178573&entry=tt">Parcheggio Duomo P5 (Parcheggio coperto a pagamento)
 </a></li> <br>
   <li><a  href="https://goo.gl/maps/xKznUPNawKYb4nSS8?coh=178573&entry=tt">Parcheggio Sanseverino P7 (Parcheggio scoperto gratuito)
